2009-07-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_balloon_color)
	(avt_set_balloon_color_name, avt_set_text_background_ballooncolor):
	new functions
	avatar.c (avt_draw_balloon, avt_normal_text): adapted
	avtterm.c (set_background_color): adapted (15 = ballooncolor)
	akfavatar.pas (TextBackground): adapted
	avatarsay.c (avatar_command): new command "ballooncolor"

2009-06-24  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.17.0 released

2009-06-20  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_name_to_color): export function

2009-06-19  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_get_color_name): new function

2009-06-13  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, akfavatar.pas: avt_bool_t is a char now!

	* avtfilechooser (get_file): support scandir (not on MinGW)
	(get_directory, compare_dirent): new functions

2009-06-12  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_import_image_stream)
	(avt_show_image_stream, avt_load_audio_stream):
	new functions

2009-06-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-default.c: neutral avatar image

	* avatar.c (avt_credits):
	fix resetting the background color

	* avatarsay.c:
	remove concept of "datadir" - use working directory

	* avatarsay.c (change_directory_of_file): new function
	(run_script): use dir of script as working directory

2009-06-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	scan for g4 and monochrome in XPM data + further optimizations

2009-06-09  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm, avt_load_image_xpm_RW):
	better handling of XPM files with too few lines

	* avatar.c (avt_load_image_xpm):
	better handling of XPM files with too few columns

	* avatar.c (avt_load_image_xpm):
	do more error checking in XPM files

2009-06-08  Andreas K. Foerster  <info@akfoerster.de>
